# solder

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  PROJECT_OVERVIEW.md  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
codegen/: Cargo.toml
codegen/src/: error.rs  lib.rs  pretty.rs
docs/: ARCHITECTURE.md  LINTER_RULES.md  RUST_AXUM.md  TEMPLATE_GUIDE.md  TROUBLESHOOTING.md
examples/: edge-cases.yaml  openrouter.yml  petstore.json  unkey-fixed.yaml
examples/multi-file/: spec.yaml
generate/: Cargo.toml
generate/src/: lib.rs
generate/tests/: integration_test.rs
ir/: Cargo.toml
ir/src/: gen_ir.rs  lib.rs
lint/: Cargo.toml
lint/src/: api.rs  lib.rs  testutil.rs
lint/src/lint/: ctx.rs  engine.rs  indexes.rs  mod.rs
lint/src/model/: mod.rs  pointers.rs  spans.rs
lint/src/parse/: mod.rs  yaml_spans.rs
lint/src/rules/: components.rs  info.rs  mod.rs  operation_id.rs  operations.rs  parameters.rs  path_params.rs  paths.rs  request_body.rs  responses.rs  schemas.rs  security.rs  servers.rs  tags.rs  version.rs
overlay/: Cargo.toml
overlay/src/: lib.rs
overlay/tests/: overlay_tests.rs
overlay/tests/fixtures/: 01_basic_update.yaml  02_root_update.yaml  03_remove_action.yaml  04_wildcard_update.yaml  05_array_append.yaml  06_copy_action.yaml  07_sequential_actions.yaml  08_nested_merge.yaml  09_no_match_noop.yaml  10_remove_array_element.yaml  11_extension_fields.yaml
parser/: Cargo.toml
parser/src/: error.rs  lib.rs  resolve.rs
parser/test-data/: unkey.yml
templates/rust-axum/: Cargo.toml
templates/typescript2/: Cargo.toml
test-generated/edge-cases-rust-axum/: Cargo.toml
test-generated/edge-cases-typescript/: package-lock.json  package.json
test-generated/edge-cases-typescript2/: package.json
test-generated/multi-file-rust-axum/: Cargo.toml
test-generated/multi-file-typescript/: package-lock.json  package.json
test-generated/multi-file-typescript2/: package.json
test-generated/museum-rust-axum/: Cargo.toml
test-generated/museum-typescript/: package-lock.json  package.json
test-generated/museum-typescript2/: package.json
test-generated/openrouter-rust-axum/: Cargo.toml
test-generated/openrouter-typescript/: package-lock.json  package.json
test-generated/petstore-rust-axum/: Cargo.toml
test-generated/petstore-rust-axum/src/: shared.rs  types.rs
test-generated/petstore-rust-axum/src/services/: faq.rs  files.rs  mod.rs  orders.rs  owners.rs  pets.rs
test-generated/petstore-rust-axum/src/types/: common.rs  faq.rs  files.rs  mod.rs  orders.rs  owners.rs  pets.rs
test-generated/petstore-typescript/: package-lock.json  package.json
test-generated/petstore-typescript2/: package-lock.json  package.json  tsconfig.json
test-generated/stripe-rust-axum/: Cargo.toml
test-generated/stripe-typescript/: package-lock.json  package.json
test-generated/stripe-typescript2/: package-lock.json
(+6887 files in other folders)
