[workspace]
resolver = "3"
members = [
  "cli",
  "codegen",
  "generate",
  "ir",
  "parser",
  "templates/typescript",
  "templates/typescript2",
  "templates/rust-axum",
  "overlay",
  "lint",
  "test-generated/*-axum",
]
default-members = [
  "cli",
  "codegen",
  "generate",
  "ir",
  "parser",
  "templates/typescript",
  "templates/typescript2",
  "templates/rust-axum",
  "overlay",
  "lint",
]
