[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "oas-gen"
path = "src/main.rs"

[dependencies]
generate = { path = "../generate" }
codegen = { path = "../codegen" }
parser2 = { path = "../parser2" }
oas = "0.2.1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
