[package]
name = "generate"
version = "0.1.0"
edition = "2024"

[dependencies]
codegen = { path = "../codegen" }
libloading = { version = "0.8", optional = true }
typescript = { path = "../templates/typescript", optional = true }
typescript2 = { path = "../templates/typescript2", optional = true }
rust-axum = { path = "../templates/rust-axum", optional = true }

[features]
default = ["typescript", "typescript2", "rust-axum"]
dynamic-plugins = ["libloading"]

[dev-dependencies]
typescript = { path = "../templates/typescript" }
codegen = { path = "../codegen" }
ir = { path = "../ir" }
