[package]
name = "overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
oas3 = "0.20.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.11"
thiserror = "2.0"
jsonpath-rust = "1.0"

[dev-dependencies]
datatest-stable = "0.3"

[[test]]
name = "overlay_tests"
harness = false
